--- a/Calculadora/MainWindow.xaml
+++ b/Calculadora/MainWindow.xaml
@@ -31,10 +31,11 @@
         <Button Content="3" FontSize="50" Grid.Column="2" Grid.Row="4"></Button>
         <Button Content="2" FontSize="50" Grid.Column="1" Grid.Row="4"></Button>
         <Button Content="1" FontSize="50" Grid.Column="0" Grid.Row="4"></Button>
-        <Button Content="+" FontSize="50"></Button>
-        <Button Content="-" FontSize="50"></Button>
-        <Button Content="*" FontSize="50"></Button>
-        <Button Content="/" FontSize="50"></Button>
-        
+        <Button Content="+" FontSize="50" Grid.Column="3" Grid.Row="4"></Button>
+        <Button Content="-" FontSize="50" Grid.Column="3" Grid.Row="3"></Button>
+        <Button Content="*" FontSize="50" Grid.Column="3" Grid.Row="2"></Button>
+        <Button Content="/" FontSize="50" Grid.Column="3" Grid.Row="1"></Button>
+        <Button Content="%" FontSize="50" Grid.Column="3" Grid.Row="0"></Button>
+
     </Grid>
 </Window>
