--- a/Calculadora/MainWindow.xaml
+++ b/Calculadora/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculadora"
         mc:Ignorable="d"
-        Title="Calculadora" Icon="assets/calculator_black.ico" Height="450" Width="800">
+        Title="Calculadora" Icon="assets/calculator_black.ico" Height="475.837" Width="806.459">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -13,29 +13,26 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-
-        <TextBlock Grid.ColumnSpan="3" Grid.RowSpan="2"></TextBlock>
-        <Button Content="7" FontSize="50" Grid.Column="0" Grid.Row="2"></Button>
-        <Button Content="8" FontSize="50" Grid.Column="1" Grid.Row="2"></Button>
-        <Button Content="9" FontSize="50" Grid.Column="2" Grid.Row="2"></Button>
-        <Button Content="6" FontSize="50" Grid.Column="2" Grid.Row="3"></Button>
-        <Button Content="5" FontSize="50" Grid.Column="1" Grid.Row="3"></Button>
-        <Button Content="4" FontSize="50" Grid.Column="0" Grid.Row="3"></Button>
-        <Button Content="3" FontSize="50" Grid.Column="2" Grid.Row="4"></Button>
-        <Button Content="2" FontSize="50" Grid.Column="1" Grid.Row="4"></Button>
-        <Button Content="1" FontSize="50" Grid.Column="0" Grid.Row="4"></Button>
-        <Button Content="+" FontSize="50" Grid.Column="3" Grid.Row="4"></Button>
-        <Button Content="-" FontSize="50" Grid.Column="3" Grid.Row="3"></Button>
-        <Button Content="*" FontSize="50" Grid.Column="3" Grid.Row="2"></Button>
-        <Button Content="/" FontSize="50" Grid.Column="3" Grid.Row="1"></Button>
-        <Button Content="%" FontSize="50" Grid.Column="3" Grid.Row="0"></Button>
+        <Viewbox Grid.ColumnSpan="3" Grid.RowSpan="2">
+            <TextBlock x:Name="NumerosTextBlock"  Margin="5"></TextBlock>
+        </Viewbox>
+        <Button Content="7" FontSize="50" Grid.Column="0" Grid.Row="2" Click="Numero_Click" Tag="7"></Button>
+        <Button Content="8" FontSize="50" Grid.Column="1" Grid.Row="2" Click="Numero_Click" Tag="8"></Button>
+        <Button Content="9" FontSize="50" Grid.Column="2" Grid.Row="2" Click="Numero_Click" Tag="9"></Button>
+        <Button Content="6" FontSize="50" Grid.Column="2" Grid.Row="3" Click="Numero_Click" Tag="6"></Button>
+        <Button Content="5" FontSize="50" Grid.Column="1" Grid.Row="3" Click="Numero_Click" Tag="5"></Button>
+        <Button Content="4" FontSize="50" Grid.Column="0" Grid.Row="3" Click="Numero_Click" Tag="4"></Button>
+        <Button Content="3" FontSize="50" Grid.Column="2" Grid.Row="4" Click="Numero_Click" Tag="3"></Button>
+        <Button Content="2" FontSize="50" Grid.Column="1" Grid.Row="4" Click="Numero_Click" Tag="2"></Button>
+        <Button Content="1" FontSize="50" Grid.Column="0" Grid.Row="4" Click="Numero_Click" Tag="1"></Button>
+        <Button Content="0" FontSize="50" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="3" Click="Numero_Click" Tag="0"></Button>
 
     </Grid>
 </Window>
